<?xml version="1.0" encoding="utf-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>net.lesfurets.debug</groupId>
  <artifactId>parent</artifactId>
  <version>1-SNAPSHOT</version>
  <packaging>pom</packaging>
  <name>Courtanet</name>
  <properties>
    <!-- build -->
    <compileSource>1.7</compileSource>
    <maven.compiler.source>1.7</maven.compiler.source>
    <maven.compiler.target>1.7</maven.compiler.target>
    <targetJdk>1.7</targetJdk>
    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <file.encoding>UTF-8</file.encoding>
    
    <!-- plugins maven -->
    <maven-core>3.0.4</maven-core>
    <maven-antrun-plugin>1.7</maven-antrun-plugin>
    <maven-assembly-plugin>2.4</maven-assembly-plugin>
    <maven-build-helper-plugin>1.7</maven-build-helper-plugin>
    <maven-buildnumber-plugin>1.2</maven-buildnumber-plugin>
    <maven-clean-plugin>2.5</maven-clean-plugin>
    <maven-compiler-plugin>3.1</maven-compiler-plugin>
    <maven-cxf-codegen-plugin>2.5.2</maven-cxf-codegen-plugin>
    <maven.dependency.plugin>2.5.1</maven.dependency.plugin>
    <maven-deploy-plugin>2.7</maven-deploy-plugin>
    <maven-eclipse-plugin>2.9</maven-eclipse-plugin>
    <maven-exec-plugin>1.2.1</maven-exec-plugin>
    <maven-failsafe-plugin>2.12.4</maven-failsafe-plugin>
    <maven-gwt-plugin>2.5.0</maven-gwt-plugin>
    <maven-install-plugin>2.4</maven-install-plugin>
    <maven-jaxb2-plugin>0.8.2</maven-jaxb2-plugin>
    <maven-jar-plugin>2.4</maven-jar-plugin>
    <maven-jspc-plugin>2.0-alpha-3</maven-jspc-plugin>
    <maven-jxr-plugin>2.3</maven-jxr-plugin>
    <maven-plugin-plugin>2.8</maven-plugin-plugin>
    <maven-native2ascii-plugin>1.0-alpha-1</maven-native2ascii-plugin>
    <maven-resources-plugin>2.6</maven-resources-plugin>
    <maven-release-plugin>2.4</maven-release-plugin>
    <maven-source-plugin>2.2.1</maven-source-plugin>
    <maven-surefire-plugin>2.12</maven-surefire-plugin>
    <maven-versions-maven-plugin>1.3.1</maven-versions-maven-plugin>
    <maven-war-plugin>2.3</maven-war-plugin>
    <maven-sonar-plugin>3.3-RC3</maven-sonar-plugin>
  </properties>
  <modules>
    <module>pack</module>
    <module>config</module>
  </modules>
  <build>
    <pluginManagement>
      <!-- define common configurations for all sub projects -->
      <plugins>
        <plugin>
          <groupId>org.codehaus.mojo</groupId>
          <artifactId>buildnumber-maven-plugin</artifactId>
          <version>${maven-buildnumber-plugin}</version>
        </plugin>
        <plugin>
          <groupId>org.apache.cxf</groupId>
          <artifactId>cxf-codegen-plugin</artifactId>
          <version>${maven-cxf-codegen-plugin}</version>
        </plugin>
        <plugin>
          <groupId>org.codehaus.mojo</groupId>
          <artifactId>build-helper-maven-plugin</artifactId>
          <version>${maven-build-helper-plugin}</version>
        </plugin>
        <!-- precompilation of JSPs -->
        <plugin>
          <groupId>org.codehaus.mojo.jspc</groupId>
          <artifactId>jspc-maven-plugin</artifactId>
          <version>${maven-jspc-plugin}</version>
          <executions>
            <execution>
              <goals>
                <goal>compile</goal>
              </goals>
            </execution>
          </executions>
          <configuration>
            <target>${maven.compiler.target}</target>
            <source>${maven.compiler.source}</source>
            <encoding>${project.build.sourceEncoding}</encoding>
            <showDeprecation>true</showDeprecation>
            <showWarnings>true</showWarnings>
          </configuration>
          <dependencies>
            <dependency>
              <groupId>org.apache.tomcat</groupId>
              <artifactId>tomcat-jasper</artifactId>
              <version>7.0.22</version>
            </dependency>
            <dependency>
              <groupId>org.eclipse.jdt.core.compiler</groupId>
              <artifactId>ecj</artifactId>
              <version>3.5.1</version>
            </dependency>
            <dependency>
              <groupId>org.codehaus.mojo.jspc</groupId>
              <artifactId>jspc-compiler-tomcat6</artifactId>
              <version>2.0-alpha-3</version>
              <exclusions>
                <exclusion>
                  <groupId>org.apache.tomcat</groupId>
                  <artifactId>jasper</artifactId>
                </exclusion>
                <exclusion>
                  <groupId>org.apache.tomcat</groupId>
                  <artifactId>jasper-el</artifactId>
                </exclusion>
                <exclusion>
                  <groupId>org.apache.tomcat</groupId>
                  <artifactId>jasper-jdt</artifactId>
                </exclusion>
                <exclusion>
                  <groupId>org.apache.tomcat</groupId>
                  <artifactId>servlet-api</artifactId>
                </exclusion>
                <exclusion>
                  <groupId>org.apache.tomcat</groupId>
                  <artifactId>jsp-api</artifactId>
                </exclusion>
                <exclusion>
                  <groupId>org.apache.tomcat</groupId>
                  <artifactId>el-api</artifactId>
                </exclusion>
                <exclusion>
                  <groupId>org.apache.tomcat</groupId>
                  <artifactId>annotations-api</artifactId>
                </exclusion>
              </exclusions>
            </dependency>
          </dependencies>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-assembly-plugin</artifactId>
          <version>${maven-assembly-plugin}</version>
        </plugin>
        <plugin>
          <groupId>org.codehaus.mojo</groupId>
          <artifactId>exec-maven-plugin</artifactId>
          <version>${maven-exec-plugin}</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-antrun-plugin</artifactId>
          <version>${maven-antrun-plugin}</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-compiler-plugin</artifactId>
          <version>${maven-compiler-plugin}</version>
          <configuration>
            <target>${maven.compiler.target}</target>
            <source>${maven.compiler.source}</source>
            <encoding>${project.build.sourceEncoding}</encoding>
            <compilerReuseStrategy>alwaysNew</compilerReuseStrategy>
            <proc>none</proc>
<!--             <optimize>true</optimize> -->
<!--             <fork>true</fork> -->
<!--             <meminitial>128m</meminitial> -->
          </configuration>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-dependency-plugin</artifactId>
          <version>${maven.dependency.plugin}</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-resources-plugin</artifactId>
          <version>${maven-resources-plugin}</version>
          <configuration>
            <encoding>${project.build.sourceEncoding}</encoding>
          </configuration>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-source-plugin</artifactId>
          <version>${maven-source-plugin}</version>
          <executions>
            <execution>
              <id>attach-sources-no-fork</id>
              <inherited>true</inherited>
              <goals>
                <goal>jar-no-fork</goal>
              </goals>
            </execution>
            <!-- here we override the super-pom attach-sources executionid
              which calls sources:jar goal. That goals forks the lifecycle, causing the 
              generate-sources phase to be called twice for the install goal. This causes 
              any other plugin bound to the generate-sources phase to be called twice which 
              usually has nasty side effects, let alone creating duplicate processing and 
              longer build times. -->
            <execution>
              <id>attach-sources</id>
              <phase>DISABLE_FORKED_LIFECYCLE_MSOURCES-13</phase>
            </execution>
          </executions>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-install-plugin</artifactId>
          <version>${maven-install-plugin}</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-jar-plugin</artifactId>
          <version>${maven-jar-plugin}</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-clean-plugin</artifactId>
          <version>${maven-clean-plugin}</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-war-plugin</artifactId>
          <version>${maven-war-plugin}</version>
        </plugin>
        <plugin>
          <groupId>org.codehaus.mojo</groupId>
          <artifactId>versions-maven-plugin</artifactId>
          <version>${maven-versions-maven-plugin}</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-deploy-plugin</artifactId>
          <version>${maven-deploy-plugin}</version>
        </plugin>
        <plugin>
          <groupId>org.jvnet.jaxb2.maven2</groupId>
          <artifactId>maven-jaxb2-plugin</artifactId>
          <version>${maven-jaxb2-plugin}</version>
        </plugin>
        <plugin>
          <groupId>org.codehaus.mojo</groupId>
          <artifactId>jaxb2-maven-plugin</artifactId>
          <version>${jaxb2-maven-plugin}</version>
       </plugin>
       <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-eclipse-plugin</artifactId>
          <version>${maven-eclipse-plugin}</version>
          <configuration>
            <downloadSources>true</downloadSources>
            <downloadJavadocs>true</downloadJavadocs>
            <buildOutputDirectory>target-eclipse/classes</buildOutputDirectory>
            <testSourcesLast>true</testSourcesLast>
            <excludeJavaFromResources>false</excludeJavaFromResources>
          </configuration>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-surefire-plugin</artifactId>
          <version>${maven-surefire-plugin}</version>
          <configuration>
            <!-- <runOrder>random</runOrder> -->
            <systemPropertyVariables>
              <java.awt.headless>true</java.awt.headless>
              <appname>unit_test</appname>
            </systemPropertyVariables>
            <excludes>
              <exclude>**/Abstract*Test.java</exclude>
              <exclude>**/*Test*$*</exclude>
            </excludes>
            <argLine>-XX:MaxPermSize=256M -Xmx1024M -Xms512M -Dfile.encoding=UTF8</argLine>
          </configuration>
        </plugin>
        <plugin>
          <groupId>org.codehaus.mojo</groupId>
          <artifactId>gwt-maven-plugin</artifactId>
          <version>${maven-gwt-plugin}</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-plugin-plugin</artifactId>
          <version>${maven-plugin-plugin}</version>
        </plugin>
        <plugin>
          <groupId>org.codehaus.sonar</groupId>
          <artifactId>sonar-maven3-plugin</artifactId>
          <version>${maven-sonar-plugin}</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-failsafe-plugin</artifactId>
          <version>${maven-failsafe-plugin}</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-release-plugin</artifactId>
          <version>${maven-release-plugin}</version>
        </plugin>
      </plugins>
    </pluginManagement>
  </build>
  </project>
